Fix: improve display of too much data in articles

--- a/src/components/Article/FullArticle/FullArticle.scss
+++ b/src/components/Article/FullArticle/FullArticle.scss
@@ -9,4 +9,5 @@
     margin-top: 25px;
     white-space: pre-line;
     overflow-wrap: anywhere;
+    overflow: hidden;
 }
